Add the possibility to add and remove logo_client

--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -50,6 +50,7 @@
         btnCancelUpload.style.display = 'none'
         loadLogo(event)
       })
+      image.style.display = 'block';
       return image.src = URL.createObjectURL(event.target.files[0]);
     } {
       arrow.style.display = 'none';
