--- a/app/views/ppsps/show.pdf.erb
+++ b/app/views/ppsps/show.pdf.erb
@@ -428,4 +428,11 @@
       </div>
     </div>
   <% end %>
+  <% if @ppsp.annexes.attached? %>
+    <% @annexes.each do |_key, value| %>
+      <% for i in (1..value[:pages]) %>
+        <%= cl_image_tag(value[:key] + '.jpg', page: i, crop: "scale") %>
+      <% end %>
+    <% end %>
+  <% end %>
 </div>
