Destroy + N'ecrase pas l'existant

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -154,3 +154,9 @@
   width: 100%;
   justify-content: center;
 }
+
+.container-annexe {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
