--- a/app/views/subcontractors/index.html.erb
+++ b/app/views/subcontractors/index.html.erb
@@ -1,7 +1,39 @@
-<% @subcontractors.each do |subcontractor| %>
-  <div class="card-database">
-    <%= link_to subcontractor, subcontractor_path(subcontractor) %>
-    <%= link_to "Edit", edit_subcontractor_path(subcontractor) %>
-    <%= link_to "x", subcontractor_path(subcontractor), method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+<div class="container">
+  <div class="link-db">
+    <%= link_to "Revenir aux bases de données", database_path %>
   </div>
-<% end %>
+  <% if policy(Subcontractor).new? %>
+    <div>
+      <button type="button" class="btn-blue" data-toggle="modal" data-target="#ModalSubcontractor">
+        Ajouter un Maître d'oeuvre
+      </button>
+    </div>
+  <% end %>
+  <%# Modal Moa %>
+  <% if policy(Subcontractor).new? %>
+    <div class="modal fade" id="ModalSubcontractor" tabindex="-1" role="dialog" aria-labelledby="ModalSubcontractor" aria-hidden="true">
+      <%= render 'ppsps/modal_subcontractor' %>
+    </div>
+  <% end %>
+  <div class="container-database">
+    <%= form_with url: subcontractors_path, class: "d-flex mt-2 justify-content-center", method: :get do |f| %>
+      <%= f.text_field :query, params: :query, class: "form-control search-db", placeholder: "Rechercher un mot-clé..." %>
+      <%= f.submit 'Go', class: "btn-orange-right", id: "btn-search" %>
+    <% end %>
+    <form class="d-flex justify-content-center mt-1" method="get" action=<%= subcontractors_path %> data-remote="true">
+      <input type="hidden" name='query' value=''>
+      <button class="btn-orange-ext" id="btn-database" type="submit">Database complète</button>
+    </form>
+    <div class="content-db">
+      <div class="flex-database">
+        <%= render 'elements', collection: @database_page %>
+      </div>
+      <div class="container-db-vide" style="display:none">
+        Votre recherche n'a retourné aucun résultat
+      </div>
+      <div class="container-pagination" data-pagination-endpoint=<%= @endpoint %> data-pagination-pages=<%= @page_amount %> data-search= <%= @search %> data-number = <%= @database_page.count %>>
+        <%= image_tag('gif-loading.gif') %>
+      </div>
+    </div>
+  </div>
+</div>
