--- a/app/views/subcontractors/create.js.erb
+++ b/app/views/subcontractors/create.js.erb
@@ -2,8 +2,8 @@ $(document).ready(function() {
   $(".modal-backdrop").hide();
   $("#ModalSubcontractor").hide();
   $(".modal-open").css({overflow: 'scroll'});
-  if (document.getElementById("ppsp_subcontractor_id")) {
-    document.getElementById("ppsp_subcontractor_id").innerHTML = "<%= j(render 'form_field_subcontractor') %>";
+  if (document.querySelector(".render-subcontractors")) {
+    document.querySelector(".render-subcontractors").innerHTML = "<%= j(render 'form_field_subcontractor') %>";
   }
   if (document.querySelector(".content-db")) {
     document.querySelector(".content-db").innerHTML = "<%= j(render 'database/content-db') %>";
