--- a/app/views/ppsps/show.pdf.erb
+++ b/app/views/ppsps/show.pdf.erb
@@ -53,6 +53,9 @@
     </div>
   </div>
   <div class="page-break">
+    <div class="img-container">
+      <img src="https://api.mapbox.com/styles/v1/mapbox/streets-v11/static/3,50,12,0,60/800x400?access_token=pk.eyJ1IjoibWF4ZW5jZWxlbm9pciIsImEiOiJja2RhNG9iMG8wZXY2MnptaDUzeDhidThpIn0.uNEuinv9hVcuU9VvtlOOsg" alt="map" class="">
+    </div>
     <div class="pdf-text-container">
       <div class="pdf-title">
         Renseignements Administratifs
