--- a/app/views/ppsps/_form.html.erb
+++ b/app/views/ppsps/_form.html.erb
@@ -245,7 +245,7 @@
       <div class="col-12 form-title">
         Les sous-traitants
       </div>
-      <div class="col-md-6 offset-md-3">
+      <div class="col-md-10 offset-md-1">
         <div class="container-header-form">
           Ajouter des sous-traitants
           <% if policy(Subcontractor).create? %>
@@ -253,20 +253,41 @@
           <% end %>
         </div>
 
-          <ul id='containerSelectedSubcontractors'>
+        <div class="subcontractors">
+          <p class='text-center'>Les sous-traitants déjà intégrés à mon PPSPS</p>
+          <div class='flex-database' id='containerSelectedSubcontractors'>
             <% if @ppsp.subcontractors.any? %>
-            Les sous-traitants déjà intégrés à mon PPSPS
               <% @ppsp.subcontractors.each do |subcontract| %>
-                <li>
-                  <%= "#{subcontract.name} - #{subcontract.responsible_name} - #{subcontract.work}" %>
-                  <%= link_to 'x', ppsp_selected_subcontractor_path(@ppsp.id, sub_id: subcontract.id), remote: true, method: :delete %>
-                </li>
+                <div class='card-form-selected'>
+                  <div class="card-form-delete">
+                    <%= link_to 'x', ppsp_selected_subcontractor_path(@ppsp.id, sub_id: subcontract.id), remote: true, method: :delete %>
+                  </div>
+                  <div class="line"><i class="fas fa-hard-hat mr-2"></i><%= subcontract.name %></div>
+                  <div class="line"><i class="fas fa-user mr-2"></i><%= subcontract.responsible_name %></div>
+                  <div class="line"><i class="fas fa-tools mr-2"></i><%= subcontract.work %></div>
+                </div>
               <% end %>
             <% end %>
-          </ul>
+          </div>
+        </div>
 
-        <div class="render-subcontractors">
-          <%= f.input :subcontractors, as: :check_boxes, collection: @subcontractors, label: '', label_method: lambda { |x| "#{x.name} - #{x.responsible_name} - #{x.work}"} %>
+        <div class="form-flex">
+          <div class="form-subcontractors form-flex-element">
+            <p>Les sous-traitans disponibles</p>
+            <fieldset class="form-group check_boxes optional ppsp_subcontractors">
+              <legend class="col-form-label pt-0"></legend>
+              <input type="hidden" name="ppsp[subcontractors][]" value="">
+              <% @subcontractors.sort_by(&:name).each do |subcontract| %>
+                <div class="form-check" id=<%= "check_ppsp_subcontractors_#{subcontract.id}"%>>
+                  <input class="form-check-input check_boxes optional" type="checkbox" value=<%= subcontract.id%> name="ppsp[subcontractors][]" id= <%= "ppsp_subcontractors_#{subcontract.id}" %>>
+                  <label class="form-check-label collection_check_boxes" for=<%="ppsp_subcontractors_#{subcontract.id}"%>><%= "#{subcontract.name} - #{subcontract.responsible_name} - #{subcontract.work}" %></label>
+                </div>
+              <% end %>
+            </fieldset>
+          </div>
+          <div class="form-selected-subcontractor form-flex-element">
+            <p>Mes ajouts</p>
+          </div>
         </div>
       </div>
 
