--- a/app/views/subcontractors/_form_field_subcontractor.html.erb
+++ b/app/views/subcontractors/_form_field_subcontractor.html.erb
@@ -1,9 +1,10 @@
 <fieldset class="form-group check_boxes optional ppsp_subcontractors">
+  <legend class="col-form-label pt-0"></legend>
   <input type="hidden" name="ppsp[subcontractors][]" value="">
-  <% policy_scope(Subcontractor).each do |subcontractor| %>
-    <div class="form-check">
-      <input class="form-check-input check_boxes optional" type="checkbox" value=<%= subcontractor.id%> name="ppsp[subcontractors][]" id= <%="ppsp_subcontractors_#{subcontractor.id}"%>>
-      <label class="form-check-label collection_check_boxes" for= <%="ppsp_subcontractors_#{subcontractor.id}"%>><%= "#{subcontractor.name} - #{subcontractor.responsible_name}" %></label>
+  <% @subcontractors.sort_by(&:name).each do |subcontract| %>
+    <div class="form-check" id=<%= "check_ppsp_subcontractors_#{subcontract.id}"%>>
+      <input class="form-check-input check_boxes optional" type="checkbox" value=<%= subcontract.id%> name="ppsp[subcontractors][]" id= <%= "ppsp_subcontractors_#{subcontract.id}" %>>
+      <label class="form-check-label collection_check_boxes" for=<%="ppsp_subcontractors_#{subcontract.id}"%>><%= "#{subcontract.name} - #{subcontract.responsible_name} - #{subcontract.work}" %></label>
     </div>
   <% end %>
 </fieldset>
