Correct the tests

--- a/app/views/ppsps/_form.html.erb
+++ b/app/views/ppsps/_form.html.erb
@@ -271,8 +271,8 @@
           </div>
         </div>
 
-        <div class="form-flex">
-          <div class="form-subcontractors form-flex-element">
+        <div class="form-flex form-subcontractors">
+          <div class="form-subcontractors-list form-flex-element">
             <p>Les sous-traitans disponibles</p>
             <fieldset class="form-group check_boxes optional ppsp_subcontractors">
               <legend class="col-form-label pt-0"></legend>
