--- a/app/views/subcontractors/destroy_selected.js.erb
+++ b/app/views/subcontractors/destroy_selected.js.erb
@@ -1,1 +1,1 @@
-document.getElementById('containerSelectedSubcontractors').innerHTML = "<%= j(render 'subcontractors/selected_subcontractors') %>"
+document.querySelector('.render-subcontractors').innerHTML = "<%= j(render 'subcontractors/selected_subcontractors') %>"
