--- a/app/views/subcontractors/_selected_subcontractors.html.erb
+++ b/app/views/subcontractors/_selected_subcontractors.html.erb
@@ -1,12 +1,38 @@
-<% if @ppsp.subcontractors.any? %>
-  <% @ppsp.subcontractors.each do |subcontract| %>
-    <div class='card-form-selected'>
-      <div class="card-form-delete">
-        <%= link_to 'x', ppsp_selected_subcontractor_path(@ppsp.id, sub_id: subcontract.id), remote: true, method: :delete %>
-      </div>
-      <div class="line"><i class="fas fa-hard-hat mr-2"></i><%= subcontract.name %></div>
-      <div class="line"><i class="fas fa-user mr-2"></i><%= subcontract.responsible_name %></div>
-      <div class="line"><i class="fas fa-tools mr-2"></i><%= subcontract.work %></div>
+<div class="subcontractors">
+  <p class='text-center'>Les sous-traitants déjà intégrés à mon PPSPS</p>
+  <div class='flex-database' id='containerSelectedSubcontractors'>
+    <% if @ppsp.subcontractors.any? %>
+      <% @ppsp.subcontractors.each do |subcontract| %>
+        <div class='card-form-selected'>
+          <div class="card-form-delete">
+            <%= link_to 'x', ppsp_selected_subcontractor_path(@ppsp.id, sub_id: subcontract.id), remote: true, method: :delete %>
+          </div>
+          <div class="line"><i class="fas fa-hard-hat mr-2"></i><%= subcontract.name %></div>
+          <div class="line"><i class="fas fa-user mr-2"></i><%= subcontract.responsible_name %></div>
+          <div class="line"><i class="fas fa-tools mr-2"></i><%= subcontract.work %></div>
+        </div>
+      <% end %>
+    <% end %>
+  </div>
+</div>
+
+<div class="form-flex form-subcontractors">
+  <div class="form-subcontractors-list form-flex-element">
+    <p>Les sous-traitans disponibles</p>
+    <fieldset class="form-group check_boxes optional ppsp_subcontractors">
+      <legend class="col-form-label pt-0"></legend>
+      <input type="hidden" name="ppsp[subcontractors][]" value="">
+      <% @subcontractors.sort_by(&:name).each do |subcontract| %>
+        <div class="form-check" id=<%= "check_ppsp_subcontractors_#{subcontract.id}"%>>
+          <input class="form-check-input check_boxes optional" type="checkbox" value=<%= subcontract.id%> name="ppsp[subcontractors][]" id= <%= "ppsp_subcontractors_#{subcontract.id}" %>>
+          <label class="form-check-label collection_check_boxes" for=<%="ppsp_subcontractors_#{subcontract.id}"%>><%= "#{subcontract.name} - #{subcontract.responsible_name} - #{subcontract.work}" %></label>
+        </div>
+      <% end %>
+    </fieldset>
+  </div>
+  <div class="form-selected-subcontractor form-flex-element">
+    <p>Mes ajouts</p>
+    <div class="selected-subcontractors">
     </div>
-  <% end %>
-<% end %>
+  </div>
+</div>
