--- a/app/views/subcontractors/destroy_selected.js.erb
+++ b/app/views/subcontractors/destroy_selected.js.erb
@@ -1,1 +1,1 @@
-document.querySelector('.render-subcontractors').innerHTML = "<%= j(render 'subcontractors/selected_subcontractors') %>"
+document.getElementById('render-subcontractors').innerHTML = "<%= j(render 'subcontractors/selected_subcontractors') %>"
