Next step : rerender after destroy

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -390,5 +390,11 @@
   .card-form-delete {
     position: relative;
     float: right;
+    color: $blue-dark;
+    &:hover {
+      cursor: pointer;
+      color: black;
+      text-decoration: none;
+    }
   }
 }
