--- a/app/views/subcontractors/index.html.erb
+++ b/app/views/subcontractors/index.html.erb
@@ -5,7 +5,7 @@
   <% if policy(Subcontractor).new? %>
     <div>
       <button type="button" class="btn-blue" data-toggle="modal" data-target="#ModalSubcontractor">
-        Ajouter un Maître d'oeuvre
+        Ajouter un Sous-Traitant
       </button>
     </div>
   <% end %>
