Implement React for the form

--- a/app/views/ppsps/_form.html.erb
+++ b/app/views/ppsps/_form.html.erb
@@ -253,27 +253,7 @@
           <% end %>
         </div>
 
-        <div id="render-subcontractors" data-ppsps_id=<%=@ppsp.id%>>
-          <div class="subcontractors">
-            <% if @ppsp.subcontractors.any? %>
-              <p class='text-center'>Les sous-traitants déjà intégrés à mon PPSPS</p>
-            <% end %>
-            <div class='flex-database' id='containerSelectedSubcontractors'>
-              <% if @ppsp.subcontractors.any? %>
-                <% @ppsp.subcontractors.each do |subcontract| %>
-                  <div class='card-form-selected'>
-                    <div class="card-form-delete">
-                      <%= link_to 'x', ppsp_selected_subcontractor_path(@ppsp.id, sub_id: subcontract.id), remote: true, method: :delete %>
-                    </div>
-                    <div class="line"><i class="fas fa-hard-hat mr-2"></i><%= subcontract.name %></div>
-                    <div class="line"><i class="fas fa-user mr-2"></i><%= subcontract.responsible_name %></div>
-                    <div class="line"><i class="fas fa-tools mr-2"></i><%= subcontract.work %></div>
-                  </div>
-                <% end %>
-              <% end %>
-            </div>
-          </div>
-        </div>
+        <div id="react-render-subcontractors" data-ppsps_id=<%=@ppsp.id%>></div>
       </div>
 
       <div class="col-12 form-title">
