--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -24,7 +24,7 @@
                 <% if @selected_installation_active.count > 0 %>
                   <h3 class='card-info-title'>Installations</h3>
                   <% @selected_installation_active.each do |select_installation| %>
-                    <div class="card-info-selected">
+                    <div class="card-info-selected selected_installation">
                       <div class="card-info-name">
                         <%= "#{select_installation.site_installation.name} <i style='font-size: 12px'>(#{select_installation.site_installation.mobile ? "mobile" : "fixe"})</i>".html_safe %>
                       </div>
@@ -37,7 +37,7 @@
                 <% if @selected_altitude_active.count > 0 %>
                   <h3 class='card-info-title'>Travail en hauteur</h3>
                   <% @selected_altitude_active.each do |select_altitude| %>
-                    <div class="card-info-selected">
+                    <div class="card-info-selected selected_altitude">
                       <div class="card-info-name">
                         <% if select_altitude.other %>
                           <%= select_altitude.altitude_work.name %>, <%= select_altitude.other %>
@@ -54,7 +54,7 @@
                 <% if @selected_risk_active.count > 0 %>
                   <h3 class="card-info-title">Risques</h3>
                   <% @selected_risk_active.each do |select_risk| %>
-                    <div class="card-info-selected">
+                    <div class="card-info-selected selected_risk">
                       <div class="card-info-name">
                         <%= select_risk.risk.name %>
                       </div>
