--- a/app/views/pages/database.html.erb
+++ b/app/views/pages/database.html.erb
@@ -52,6 +52,10 @@
       <%= image_tag 'logo-moa.svg', width: 50, height: 50  %>
       <p>Sous-Traitants</p>
     <% end %>
+    <%= link_to risks_path, class: "card-selec-db col-lg-4 col-md-6 col-sm-12", id: "subcontractors" do %>
+      <%= image_tag 'logo-moa.svg', width: 50, height: 50  %>
+      <p>Types de travaux</p>
+    <% end %>
   </div>
 </div>
 
