Start model worker

--- a/app/views/pages/database.html.erb
+++ b/app/views/pages/database.html.erb
@@ -48,6 +48,10 @@
       <%= image_tag 'logo-doctor.svg', width: 50, height: 50  %>
       <p>Médecine du travail</p>
     <% end %>
+    <%= link_to workers_path, class: "card-selec-db col-lg-4 col-md-6 col-sm-12", id: "work_mdedecine" do %>
+      <%= image_tag 'logo-doctor.svg', width: 50, height: 50  %>
+      <p>Compagnons</p>
+    <% end %>
   </div>
 </div>
 
