Start API Machines

--- a/app/views/ppsps/_form.html.erb
+++ b/app/views/ppsps/_form.html.erb
@@ -242,6 +242,10 @@
           <%= render 'render_logo_client' %>
         </div>
       </div>
+
+      <div id="machines-form-react"></div>
+
+
       <div class="col-12 form-title">
         Les informations sécurité de l'entreprise
       </div>
