--- a/app/views/workers/_form_field_worker.html.erb
+++ b/app/views/workers/_form_field_worker.html.erb
@@ -1,5 +1,5 @@
 <div class="container-header-form">
-  <label class="select required" for="ppsp_worker_id">Compagnon <abbr title="required">*</abbr></label>
+  <label class="select required" for="ppsp_worker_id">Compagnon<abbr title="required">*</abbr></label>
   <% if policy(Worker).create? %>
     <button type="button" class="btn-round btn-fill" data-toggle="modal" data-target="#ModalWorker" id="WorkerDb">
       <i class="fas fa-plus"></i>
@@ -9,6 +9,6 @@
 <select class="form-control select required" name="ppsp[worker_id]" id="ppsp_worker_id">
   <option value=""></option>
   <% @database.each do |instance| %>
-    <%= "<option value=#{instance.id}>#{instance.name}</option>".html_safe %>
+    <%= "<option value=#{instance.id}>#{instance.first_name}</option>".html_safe %>
   <% end %>
 </select>
