--- a/app/views/workers/create.js.erb
+++ b/app/views/workers/create.js.erb
@@ -1,6 +1,6 @@
 $(document).ready(function() {
   $(".modal-backdrop").hide();
-  $("#ModalAntiPoison").hide();
+  $("#ModalWorker").hide();
   $(".modal-open").css({overflow: 'scroll'});
   if (document.querySelector(".ppsp_worker_id")) {
     document.querySelector(".ppsp_worker_id").innerHTML = "<%= j(render 'form_field_worker') %>";
