Continue Machines Form

--- a/app/views/ppsps/_form.html.erb
+++ b/app/views/ppsps/_form.html.erb
@@ -243,7 +243,7 @@
         </div>
       </div>
 
-      <div id="machines-form-react"></div>
+      <div class='colmd-6 offset-md-3' id="machines-form-react"></div>
 
 
       <div class="col-12 form-title">
