Do the select vehicules with React

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -33,6 +33,7 @@ $btn-add-size: 24px;
   color: black;
   border: none;
   &:hover {
+    cursor: pointer;
     background-color: $orange;
     text-decoration: none;
     color: black;
@@ -194,8 +195,9 @@ $btn-add-size: 24px;
   overflow: hidden;
   position: relative;
   transition: width 0.2s ease-in-out;
-  background: linear-gradient(134.17deg, #EEF0F5 4.98%, #E6E9EF 94.88%);
-  box-shadow: -2px -2px 5px rgba(255, 255, 255, 0.8), 2px 2px 5px rgba(166, 180, 200, 0.7);
+  background: linear-gradient(134.17deg, #eef0f5 4.98%, #e6e9ef 94.88%);
+  box-shadow: -2px -2px 5px rgba(255, 255, 255, 0.8),
+    2px 2px 5px rgba(166, 180, 200, 0.7);
 }
 .add-btn:hover {
   width: $btn-add-size * 2.5;
@@ -203,7 +205,7 @@ $btn-add-size: 24px;
 .add-btn::before,
 .add-btn::after {
   transition: width 0.2s ease-in-out, border-radius 0.2s ease-in-out;
-  content: "";
+  content: '';
   position: absolute;
   height: 2px;
   width: 9px;
@@ -241,7 +243,7 @@ $btn-add-size: 24px;
 .add-icon::after,
 .add-icon::before {
   transition: all 0.2s ease-in-out;
-  content: "";
+  content: '';
   position: absolute;
   height: 10px;
   width: 1px;
@@ -269,7 +271,6 @@ $btn-add-size: 24px;
   height: 2px;
   top: calc(50% - 1px);
 }
-
 
 .btn-round {
   cursor: pointer;
@@ -350,7 +351,7 @@ $btn-add-size: 24px;
   }
 }
 
-@media(max-width: 700px) {
+@media (max-width: 700px) {
   #btn-mes-infos {
     position: fixed;
     bottom: 10px;
@@ -369,12 +370,12 @@ $btn-add-size: 24px;
   }
 }
 
-input[type=file]::-webkit-file-upload-button {
+input[type='file']::-webkit-file-upload-button {
   border-radius: 8px;
   border: 1px solid $orange;
   outline: none;
   &:hover {
     cursor: pointer;
     box-shadow: 0.5px 0.5px 0.5px 0.5px $orange;
-  } 
+  }
 }
