--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -74,6 +74,19 @@
   }
 }
 
+.card-delete {
+  border: none;
+  font-size: 18px;
+  color: $blue-dark;
+  font-weight: 700;
+  margin-left: 6px;
+  &:hover {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+}
+
 .card-bdd {
   position: relative;
   width: 250px;
@@ -391,4 +404,15 @@
 
 .card-logo-empty {
   text-align: center;
+}
+
+.card-vehicule {
+  padding: 6px 12px;
+  box-shadow: 1px 1px 2px 2px rgba(136, 136, 136, 0.466);
+  border-radius: 8px;
+  margin: 10px;
+  .card-vehicule-title {
+    font-weight: 600;
+    text-align: center;
+  }
 }
