--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -1,4 +1,3 @@
-
 .container-app {
   width: 100%;
   padding-right: 15px;
@@ -18,7 +17,7 @@
     max-width: 720px;
   }
 }
-  
+
 @media (min-width: 992px) {
   .container-app {
     max-width: 960px;
@@ -65,7 +64,7 @@
   height: fit-content;
 }
 
-@media(min-width: 991px) {
+@media (min-width: 991px) {
   .container-infos-supp {
     flex-wrap: wrap;
 
@@ -75,7 +74,7 @@
   }
 }
 
-@media(min-width: 1200px) {
+@media (min-width: 1200px) {
   .container-infos-supp {
     flex-wrap: wrap;
 
@@ -85,10 +84,10 @@
   }
 }
 
-@media(max-width: 991px) {
+@media (max-width: 991px) {
   .container-infos-supp {
     flex-direction: column;
-  
+
     .container-info {
       width: 100%;
       display: flex;
@@ -104,6 +103,12 @@
   }
 }
 
+.container-flex {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
 .container-small {
   width: 200px;
 }
@@ -116,16 +121,6 @@
 .container-header-form {
   display: flex;
   align-items: flex-start;
-}
-
-.container-pagination {
-  display: flex;
-  justify-content: center;
-}
-
-.container-db-vide {
-  display: flex;
-  justify-content: center;
 }
 
 .container-calendar {
