--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -411,6 +411,7 @@
   box-shadow: 1px 1px 2px 2px rgba(136, 136, 136, 0.466);
   border-radius: 8px;
   margin: 10px;
+  height: fit-content;
   .card-vehicule-title {
     font-weight: 600;
     text-align: center;
