--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -150,7 +150,7 @@
   justify-content: center;
 }
 
-.container-annexe {
+.container-center-column {
   display: flex;
   align-items: center;
   flex-direction: column;
