--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -11,7 +11,7 @@
 }
 
 .form-react-conductors {
-  height: 300px;
+  height: 380px;
   background-color: $blue-dark;
   padding: 20px 0;
   display: flex;
@@ -23,10 +23,25 @@
   border-bottom-left-radius: 0px;
 }
 
+.form-select-machines-title {
+  padding: 10px 20px;
+  font-weight: 500;
+  color: white;
+  text-align: center;
+  width: 100%;
+}
+
 .form-checkboxes-title {
   background-color: white;
-  padding: 10px 20px;
+  padding: 5px 10px;
+  width: 100%;
+  text-align: center;
+}
+
+.form-checkboxes-subtitle {
+  background-color: white;
   border-bottom: solid 1px gray;
+  padding: 5px 10px;
 }
 
 .form-checkboxes {
@@ -35,6 +50,7 @@
   background: white;
   padding: 20px 40px;
   margin-bottom: 10px;
+  width: 100%;
 }
 
 .form-conductors-selection {
