Last problem on latitue sometimes ?

--- a/app/views/pages/database.html.erb
+++ b/app/views/pages/database.html.erb
@@ -51,6 +51,7 @@
     <%= link_to workers_path, class: "card-selec-db col-lg-4 col-md-6 col-sm-12", id: "work_mdedecine" do %>
       <%= image_tag 'logo-doctor.svg', width: 50, height: 50  %>
       <p>Compagnons</p>
+    <% end %>
     <%= link_to subcontractors_path, class: "card-selec-db col-lg-4 col-md-6 col-sm-12", id: "subcontractors" do %>
       <%= image_tag 'logo-moa.svg', width: 50, height: 50  %>
       <p>Sous-Traitants</p>
